--- a/package.xml
+++ b/package.xml
@@ -4,10 +4,10 @@
   <version>0.0.0</version>
   <description>The zaber_device package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="peterpolidoro@gmail.com">Peter Polidoro</maintainer>
+  <maintainer email="polidorop@janelia.hhmi.org">Peter Polidoro</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -25,7 +25,7 @@
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
   <!-- Authors do not have to be maintianers, but could be -->
   <!-- Example: -->
-  <author email="peterpolidoro@gmail.com">Peter Polidoro</author>
+  <author email="polidorop@janelia.hhmi.org">Peter Polidoro</author>
 
 
   <!-- The *_depend tags are used to specify dependencies -->
