--- a/package.xml
+++ b/package.xml
@@ -43,10 +43,10 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
   <build_depend>geometry_msgs</build_depend>
-  <!-- <build_depend>python-zaber-device</build_depend> -->
+  <build_depend>python-zaber-device</build_depend>
   <run_depend>rospy</run_depend>
   <run_depend>geometry_msgs</run_depend>
-  <!-- <run_depend>python-zaber-device</run_depend> -->
+  <run_depend>python-zaber-device</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
