--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>zaber_device_ros</name>
+  <name>zaber_stage</name>
   <version>0.0.0</version>
-  <description>The zaber_device_ros package</description>
+  <description>The zaber_stage package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,9 +19,9 @@
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <url type="website">https://github.com/janelia-ros/zaber_device_ros</url>
-  <url type="bugtracker">https://github.com/janelia-ros/zaber_device_ros/issues</url>
-  <url type="repository">https://github.com/janelia-ros/zaber_device_ros</url>
+  <url type="website">https://github.com/janelia-ros/zaber_stage_ros</url>
+  <url type="bugtracker">https://github.com/janelia-ros/zaber_stage_ros/issues</url>
+  <url type="repository">https://github.com/janelia-ros/zaber_stage_ros</url>
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
   <!-- Authors do not have to be maintianers, but could be -->
