--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>zaber_stage</name>
   <version>0.0.0</version>
   <description>The zaber_stage package</description>
@@ -41,12 +41,9 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>rospy</build_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>python-zaber-device</build_depend>
-  <run_depend>rospy</run_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>python-zaber-device</run_depend>
+  <depend>rospy</depend>
+  <depend>geometry_msgs</depend>
+  <depend>python-zaber-device</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
