Added launch file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ project(zaber_stage)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   rospy
+  roslaunch
   geometry_msgs
 )
 
@@ -17,6 +18,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## modules and global scripts declared therein get installed
 ## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
 # catkin_python_setup()
+
+roslaunch_add_file_check(launch)
 
 ################################################
 ## Declare ROS messages, services and actions ##
