--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(catkin REQUIRED COMPONENTS
   roslaunch
   geometry_msgs
   message_generation
+  actionlib_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -61,16 +62,16 @@ add_service_files(
 )
 
 ## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
+add_action_files(
+  FILES
+  Empty.action
+)
 
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
   DEPENDENCIES
   geometry_msgs
+  actionlib_msgs
 )
 
 ################################################
@@ -107,6 +108,7 @@ catkin_package(
 #  LIBRARIES zaber_device_ros
 #  CATKIN_DEPENDS rospy
 #  DEPENDS system_lib
+ CATKIN_DEPENDS actionlib_msgs
 )
 
 ###########
