--- a/package.xml
+++ b/package.xml
@@ -42,9 +42,10 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <depend>rospy</depend>
-  <depend>geometry_msgs</depend>
   <build_depend>message_generation</build_depend>
   <depend>message_runtime</depend>
+  <depend>geometry_msgs</depend>
+  <depend>actionlib_msgs</depend>
   <depend>python-zaber-device</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
