--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ project(zaber_stage)
 find_package(catkin REQUIRED COMPONENTS
   rospy
   roslaunch
+  std_msgs
   geometry_msgs
   message_generation
   actionlib_msgs
@@ -70,6 +71,7 @@ add_action_files(
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
   DEPENDENCIES
+  std_msgs
   geometry_msgs
   actionlib_msgs
 )
