--- a/package.xml
+++ b/package.xml
@@ -44,6 +44,7 @@
   <depend>rospy</depend>
   <build_depend>message_generation</build_depend>
   <depend>message_runtime</depend>
+  <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>actionlib_msgs</depend>
   <depend>python-zaber-device</depend>
