Added pose_and_debug publisher.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,17 +50,17 @@ roslaunch_add_file_check(launch)
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+  FILES
+  PoseAndDebugInfo.msg
+)
 
 ## Generate services in the 'srv' folder
 add_service_files(
   FILES
   GetPose.srv
   Moving.srv
+  GetPoseAndDebugInfo.srv
 )
 
 ## Generate actions in the 'action' folder
